--- a/public/css/tryroma.css
+++ b/public/css/tryroma.css
@@ -1,2 +1,22 @@
-#reactArea {
+#console {
+  background-color: #031340;
+  border: gray solid 5px;;
+  color: white;
+  font-size: 16px;
+  position: relative;
+  height: 600px;
+  margin: 100px;
+}
+
+#bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+#inputArea {
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: 20px;
+  width: 100%;
 }
