--- a/public/css/tryroma.css
+++ b/public/css/tryroma.css
@@ -15,12 +15,24 @@
 }
 
 #inputArea {
-  margin-top: 20px;
   background-color: black;
-  border: none;
   color: white;
-  font-size: 20px;
   width: 100%;
+  font-size: 20px;
+  margin-bottom: 0;
+}
+
+#inputBox {
+  color: white;
+  background-color: black;
+  font-size: 20px;
+  width: 95%;
+  border: none;
+
+}
+
+input[type="text"]:focus {
+  outline: 0;
 }
 
 p.res-line {
