--- a/public/css/tryroma.css
+++ b/public/css/tryroma.css
@@ -1,16 +1,19 @@
-#console {
+#console-screen {
   background-color: #031340;
   border: gray solid 5px;;
-  color: white;
-  font-size: 20px;
-  position: relative;
+  font-family: courier;
   height: 600px;
   margin: 100px;
-  font-family: courier;
+  overflow: auto;
+  position: relative;
   white-space: pre;
-  word-wrap:break-word;
 }
 
+/*
+ =========================================
+  Header Area
+ =========================================
+*/
 #greeting {
   color: #00cede;
 }
@@ -23,45 +26,57 @@
   font-size: 20px;
 }
 
-#non-active-nodelist {
+#non-active-nodeinfo {
   color: red;
   font-size: 33px;
 }
 
-#active-nodelist {
+#active-nodeinfo {
   color: lime;
 }
 
-
-#displayArea {
+/*
+ =========================================
+  Result Area
+ =========================================
+*/
+#resultArea {
+  bottom: 20px;
   position: absolute;
-  bottom: 0;
+  color: #A0C5E8;
+  font-size: 20px;
   width: 100%;
-  max-height：600px;
+  height：580px;
+  /*overflow: auto;*/
+  word-wrap:break-word;
 }
 
+p.no-margin {
+    margin: 0;
+}
+
+/*
+ =========================================
+  Input Area
+ =========================================
+*/
 #inputArea {
+  bottom: 0;
+  position: absolute;
   background-color: black;
   color: white;
-  width: 100%;
   font-size: 20px;
-  margin-bottom: 0;
+  width: 100%;
 }
 
 #inputBox {
-  color: white;
   background-color: black;
+  border: none;
+  color: white;
   font-size: 20px;
   width: 95%;
-  border: none;
-
 }
 
 input[type="text"]:focus {
   outline: 0;
-}
-
-p.res-line {
-    margin: 0;
-    color: #A0C5E8;
 }
