--- a/views/stats.erb
+++ b/views/stats.erb
@@ -1,41 +1,9 @@
-<html>
-  <head>
-    <title>Try Roma</title>
-    <link rel="stylesheet" href="/css/tryroma.css" />
-    <link rel="stylesheet" href="/css/cssConsole.css" type="text/css">
-    <script src="https://fb.me/react-0.13.3.js"></script> <!-- toDO download library-->
-    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> <!-- toDO download library-->
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  <!-- toDO download library-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script> <!-- toDO download library-->
-    <script src="/js/cssConsole.js"></script><!-- todo change min file -->
-
-
-
-  </head>
-  <body>
-
-    <script type="text/jsx;harmony=true" src="/js/tryroma.js"></script>
-    <div id="reactArea"></div>
-
-
-
-
-
-
-<!--
-	<div class="container">
-		<div class="console">
-			<div class="line white">Welcome to TryROMA!</div>
-		</div>
-		<div class="bottom">
-			<div class="label" />
-			<div id="input" />
-		</div>
-	</div> 
--->
-
-
-
-
-  </body>
-</html>
+<!DOCTYPE html>
+<title>Try Roma</title>
+<link rel="stylesheet" href="/css/tryroma.css" />
+<script src="https://fb.me/react-0.13.3.js"></script> <!-- toDO download library-->
+<script src="https://fb.me/JSXTransformer-0.13.3.js"></script> <!-- toDO download library-->
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  <!-- toDO download library-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script> <!-- toDO download library-->
+<script type="text/jsx;harmony=true" src="/js/tryroma.js"></script>
+<div id="reactArea"></div>
