--- a/public/css/tryroma.css
+++ b/public/css/tryroma.css
@@ -100,6 +100,11 @@ ul.tutorial-commands {
   font-size: 20px;
 }
 
+#tutorial-explain {
+  font-size: 25px;
+}
+
+
 #non-active-nodeinfo {
   color: red;
   font-size: 33px;
