--- a/views/stats.erb
+++ b/views/stats.erb
@@ -5,5 +5,8 @@
 <script src="https://fb.me/JSXTransformer-0.13.3.js"></script> <!-- toDO download library-->
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>  <!-- toDO download library-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script> <!-- toDO download library-->
-<script type="text/jsx;harmony=true" src="/js/tryroma.js"></script>
+<script type="text/jsx;harmony=true" src="/js/tryroma_common.js"></script>
+<script type="text/jsx;harmony=true" src="/js/tryroma_free.js"></script>
+<script type="text/jsx;harmony=true" src="/js/tryroma_tutorial.js"></script>
+<script type="text/jsx;harmony=true" src="/js/tryroma_react.js"></script>
 <div id="reactArea"></div>
