--- a/public/css/tryroma.css
+++ b/public/css/tryroma.css
@@ -7,6 +7,7 @@ body {
   Title
  =========================================
 */
+/*
 #title {
   font-size: 60px;
   color: red;
@@ -17,6 +18,7 @@ img#title-image {
   position: relative;
   top: 19px;
 }
+*/
 
 /*
  =========================================
