--- a/views/tryroma.erb
+++ b/views/tryroma.erb
@@ -8,12 +8,20 @@
 <div id="hpFooter"></div>
 
 <script type="text/javascript" src="/js/react.min.js"></script>
-<script type="text/javascript" src="/js/JSXTransformer.js"></script> <!-- development -->
 <script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
+
+<script type="text/javascript" src="/js/tryroma_common.js"></script>
+<script type="text/javascript" src="/js/tryroma_free.js"></script>
+<script type="text/javascript" src="/js/tryroma_tutorial.js"></script>
+<script type="text/javascript" src="/js/tryroma_react.js"></script>
+<script type="text/javascript" src="/js/hpComponent.js"></script>
+
+<!--
+<script type="text/javascript" src="/js/JSXTransformer.js"></script>
 <script type="text/jsx;harmony=true" src="/js/tryroma_common.js"></script>
 <script type="text/jsx;harmony=true" src="/js/tryroma_free.js"></script>
 <script type="text/jsx;harmony=true" src="/js/tryroma_tutorial.js"></script>
 <script type="text/jsx;harmony=true" src="/js/tryroma_react.js"></script>
 <script type="text/jsx;harmony=true" src="/js/hpComponent.js"></script>
-
+-->
 <script type="text/javascript" src="/js/bootstrap.min.js"></script> <!-- for HP -->
